# svarog

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/svarog/: Cargo.toml
crates/svarog-chf/: Cargo.toml
crates/svarog-chf/src/: error.rs  file.rs  lib.rs
crates/svarog-chf/src/parts/: data.rs  dna.rs  itemport.rs  material.rs  mod.rs  name_hash.rs
crates/svarog-common/: Cargo.toml
crates/svarog-common/src/: crc.rs  error.rs  guid.rs  lib.rs  reader.rs  simd.rs
crates/svarog-cryxml/: Cargo.toml
crates/svarog-cryxml/src/: attribute.rs  builder.rs  error.rs  from_xml.rs  header.rs  lib.rs  node.rs  parser.rs
crates/svarog-cryxml/testdata/: defaulttextures.xml
crates/svarog-datacore/: Cargo.toml
crates/svarog-datacore/examples/: test_dcb.rs  test_roundtrip.rs  test_roundtrip_detailed.rs
crates/svarog-datacore/src/: builder.rs  c_header.rs  database.rs  error.rs  instance.rs  lib.rs  query.rs  types.rs  value.rs
crates/svarog-datacore/src/export/: mod.rs  parallel.rs  walker.rs  xml.rs
crates/svarog-datacore/src/structs/: definition.rs  mod.rs  property.rs  record.rs  reference.rs  string_id.rs
crates/svarog-dds/: Cargo.toml
crates/svarog-dds/src/: error.rs  header.rs  lib.rs  merge.rs
crates/svarog-gui/: Cargo.toml
crates/svarog-gui/src/: app.rs  main.rs  preview.rs  state.rs  widgets.rs  worker.rs
crates/svarog-gui/src/panels/: datacore_browser.rs  extraction.rs  mod.rs  p4k_browser.rs
crates/svarog-p4k/: Cargo.toml
crates/svarog-p4k/src/: archive.rs  crypto.rs  decompress.rs  entry.rs  error.rs  lib.rs  simd.rs
crates/svarog-p4k/src/zip/: central_dir.rs  eocd.rs  local.rs  mod.rs
crates/svarog/src/: lib.rs
src/: main.rs
