[package]
name = "svarog-chf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "CHF character head file parser for Star Citizen"

[dependencies]
svarog-common.workspace = true
byteorder.workspace = true
zerocopy.workspace = true
thiserror.workspace = true
zstd.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "svarog-common/serde"]

[dev-dependencies]
